Fixed alignment Take II

--- a/css/style.css
+++ b/css/style.css
@@ -527,7 +527,7 @@ form {
 #section7-source {
     font-weight: light;
     font-size:12px;
-    padding-top: 335px;
+    padding-top: 360px;
     z-index:10;
     position: absolute;
     right:5px;  
